force-app/main/default/objects/Visitor__c/Visitor__c.object-meta.xml
<CustomObject>
    <label>Visitor</label>
    <nameField>
        <label>Visitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>