force-app/main/default/objects/Visitor__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>