force-app/main/default/objects/Visitor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visitors</relationshipLabel>
    <relationshipName>Visitors1</relationshipName>
    <type>Lookup</type>
</CustomField>