force-app/main/default/objects/Visitor__c/fields/DepartmentOfContactDH__c.field-meta.xml
<CustomField>
    <fullName>DepartmentOfContactDH__c</fullName>
    <formula>Text(Contact__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>