force-app/main/default/objects/Visitor__c/fields/DepartmentOfContactSAG__c.field-meta.xml
<CustomField>
    <fullName>DepartmentOfContactSAG__c</fullName>
    <formula>Contact__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>