force-app/main/default/objects/Visitor__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visitors1</relationshipName>
    <type>Lookup</type>
</CustomField>