force-app/main/default/objects/Visitor__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Visitors</relationshipLabel>
    <relationshipName>Visitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>